Fixed some bugs related to displaying articles. Improved responsiveness of some pages on mobile devices.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -485,7 +485,7 @@ body.logged-in .nav-bar .link-list ul #user-profile {
 .popup-container {
 	position: fixed;
 	top: 0;
-	z-index: 5;
+	z-index: 7;
 	width: 100%;
 	height: 100vh;
 	background-color: var(--popup-container-background-color);
@@ -1196,6 +1196,7 @@ body.dark-mode .banner .banner-img {
 	font-size: 1.5em;
 	color: var(--background-color-500);
 	cursor: pointer;
+	display: none;
 }
 .articles-container.articles-loading .load-more {
 	display: none;
@@ -1348,6 +1349,7 @@ body.dark-mode .banner .banner-img {
 }
 
 .highlight-categories {
+	text-align: center;
 	color: var(--highlight-color);
 }
 
@@ -1507,7 +1509,7 @@ body.logged-in .get-started-container {
 	-moz-border-radius: 0.5em;
 	-ms-border-radius: 0.5em;
 	-o-border-radius: 0.5em;
-	z-index: 6;
+	z-index: 8;
 	position: fixed;
 	bottom: 2em;
 	right: 1em;
@@ -1732,6 +1734,7 @@ body.logged-in
 	.footer .footer-content > .description {
 		width: 90%;
 		margin: 1.25em 0;
+		text-align: center;
 	}
 
 	.footer > .footer-content > .newsletter-description {
@@ -1806,6 +1809,7 @@ body.logged-in
 
 	.page-heading-1 {
 		text-align: center;
+		padding: 0 1em 0.5em;
 	}
 	.page-heading-1::before {
 		left: 50%;
